# Ylosia

./: .breakpoints  .gitignore  README.md  inference.py  pyproject.toml  replit.nix  requirements.txt  train.py
model/: detection.py  misc.py
model/config/models/: yolov8n.yaml
model/config/training/: train.yaml
model/dataset/: data_loader.py  utils.py
model/models/: base_model.py  detection_model.py  loss.py  metrics.py  tal.py  utils.py
model/modules/: __init__.py  block.py  head.py  test.py  utils.py
