[tool.poetry]
name = "ylosia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.3.1"
torchvision = "0.18.1"
opencv-python = "4.10.0.84"
torchinfo = "1.8.0"
pyyaml = "6.0.1"
tqdm = "4.66.4"
matplotlib = "3.9.1"
ruamel-yaml = "0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
